feat: add content unity

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/ExportedWebGL.loader.js";
+      var loaderUrl = buildUrl + "/arjuna-prototype.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ExportedWebGL.data.br",
-        frameworkUrl: buildUrl + "/ExportedWebGL.framework.js.br",
-        codeUrl: buildUrl + "/ExportedWebGL.wasm.br",
+        dataUrl: buildUrl + "/arjuna-prototype.data",
+        frameworkUrl: buildUrl + "/arjuna-prototype.framework.js",
+        codeUrl: buildUrl + "/arjuna-prototype.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "KosongInteractive",
         productName: "Arjuna (Prototype)",
