--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         container.className = "unity-mobile";
         canvas.className = "unity-mobile";
         canvas.style.width = "100%";
+        canvas.style.height = (canvas.offsetWidth * 9 / 16) + "px";
 
         // To lower canvas resolution on mobile devices to gain some
         // performance, uncomment the following line:
